testdata/language-features/basic-list/list10.reject.out
type error: can not unify
  <<installed-prelude-path>>/Internals.lc:58:6:
  data Int
       ^^^
with
  Float
in []
------------ trace
!type error: can not unify
  <<installed-prelude-path>>/Internals.lc:58:6:
  data Int
       ^^^
with
  Float
in []
------------ tooltips
1:10-1:11
    _b
1:12-1:15
    Float
1:20-1:25
    Type
1:21-1:24
    Type